--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ matrix:
   fast_finish: true
   include:
     - python: 2.7
+    - python: 3.5
+    - python: 3.6
     - os: osx
       language: generic
 
